docs: documentation for show opening
